--- a/task2.css
+++ b/task2.css
@@ -1,6 +1,7 @@
 body{
     width:100%;
     margin:0px 0px 0px 0px;
+    background-color: lightgoldenrodyellow;
     
 }
 @media only screen and (max-width:300px){
@@ -140,14 +141,15 @@ h2{
     
     background-color:none;
     width: 100px;
-    margin: 15px;
+    margin: 6px;
     text-align: center;
-    line-height: 10px;
-    font-size: 12px;
+    line-height: 30px;
+    font-size: 18px;
     padding:5px;
 }
-.flex-container>div:hover{
+.flex-container1>div:hover{
     background-color:rgb(48, 88, 141);
+    cursor:pointer;
 }
 
 .dropbtn {
@@ -179,6 +181,7 @@ h2{
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: start;
 }
 
 .dropdown-content a:hover {background-color: #ac7474}
@@ -223,6 +226,7 @@ h2{
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align:start;
 }
 
 .dropdown1-content a:hover {background-color: #ac7474}
@@ -283,7 +287,7 @@ h2{
 }
 .slideshow{
     width:100%;
-    height:550px;
+    height:450px;
     overflow:hidden;
     border-color:1px solid black;
 }
@@ -303,4 +307,3 @@ P{
     height:136px;
     width:136px;
 }
-
