--- a/task2.css
+++ b/task2.css
@@ -1,13 +1,9 @@
 body{
     width:100%;
-    margin:0px 0px 0px 0px;
+    margin-top:0px;
+    margin-left:0px;
     background-color: lightgoldenrodyellow;
     
-}
-@media only screen and (max-width:300px){
-    body{
-        margin:0px 0px 0px 0px;
-    }
 }
 .flex-container{
     display:flex;
@@ -16,6 +12,7 @@ body{
     box-shadow:black;
     overflow:hidden;
     width:100%;
+    margin:0px 0px 0px 0px;
 }
 @media only screen and (max-width:500px){
     .flex-container{
@@ -32,12 +29,9 @@ body{
     font-size: 15px;
     padding:10px;
 }
-
-
 .container{
     width:100%;
-    height:100%;
-   
+    height:100%;   
 }
 .row{
     width:100%;
@@ -51,23 +45,18 @@ body{
 }
 div.gallery1{
     
-    float: left;
-   
+    float: left;  
 }
-
-
-
 div.gallery1 img {
     width: 100%;
     height:250px;
 }
-
 div.desc {
     padding: 15px;
     text-align: center;
 }
 .responsive{
-    padding:0 6px;
+    
     float:left;
     width:23%;
 }
@@ -79,17 +68,15 @@ div.desc {
 {
     .responsive{
         width:46%;
-        margin:6px 0;
+       
     }
 }
 @media only screen and (max-width:350px){
     .responsive{
         width:100%;
-        padding:6px;
+       
     }
 }
-
-
 .box{
     width:100%;
     height:auto;
@@ -99,20 +86,6 @@ div.desc {
   width:25%;
   height:auto;  
   display:block;
-}
-ul li{
-    list-style-type:none;
-    padding-top:10px;
-    padding-left:0px;
-    display:block;
-}
-ul li:hover{
-    color:blue;
-}
-ul li:active{
-  
-    background-color:green;
-    size:20px;
 }
 h2{
     color:#6600ff;
@@ -130,11 +103,13 @@ h2{
     margin-top:6px;
     border: 1px solid;
 }
-
 .flex-container1{
     display:flex;
     flex-direction:row;
     background-color:rgb(207, 143, 183);
+    margin:0px 0px 0px 0px;
+    overflow:scroll;
+  
 }
 
 .flex-container1>div{
@@ -143,7 +118,7 @@ h2{
     width: 100px;
     margin: 6px;
     text-align: center;
-    line-height: 30px;
+    line-height: 35px;
     font-size: 18px;
     padding:5px;
 }
@@ -151,22 +126,18 @@ h2{
     background-color:rgb(48, 88, 141);
     cursor:pointer;
 }
-
 .dropbtn {
     background-color: rgb(207, 143, 183);
   
     padding: 12px;
     font-size: 16px;
     border: none;
-    cursor: pointer;
-    
+        cursor: pointer;    
 }
-
 .dropdown {
     position: relative;
     display: inline-block;
 }
-
 .dropdown-content {
     display: none;
     position: absolute;
@@ -175,7 +146,6 @@ h2{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -183,77 +153,24 @@ h2{
     display: block;
     text-align: start;
 }
-
 .dropdown-content a:hover {background-color: #ac7474}
-
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
 .dropdown:hover .dropbtn {
     background-color: #dbdfdb;
 }
 .fa1{
     font-size:40px;
-}
-
-
-.dropbtn1 {
-    background-color: rgb(102, 99, 117);
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown1 {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown1-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown1-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align:start;
-}
-
-.dropdown1-content a:hover {background-color: #ac7474}
-
-.dropdown1:hover .dropdown1-content {
-    display: block;
-}
-
-.dropdown1:hover .dropbtn1 {
-    background-color: #dbdfdb;
-}
-@media only screen and (min-width:500px){
-    .dropbtn1{
-        display:none;
-    }
-}
-
-     
+}     
 .flex-container2{
     display:flex;
     flex-direction:row ;
     background-color:none;
+    margin:0px 0px 0px 0px;
+    
     
 }
-
-    
-
 @media only screen and (max-width:500px){ 
     .flex-container2{
     flex-direction:column;
@@ -264,8 +181,6 @@ h2{
     width: 100% !important;
 }
 }
-
-
 .flex-container2>div{
     
     background-color:rgb(207, 143, 183);
@@ -276,7 +191,6 @@ h2{
     font-size: 15px;
     padding:0px;
 }
-
 .mySlides{
     display:none;
 }
@@ -287,7 +201,7 @@ h2{
 }
 .slideshow{
     width:100%;
-    height:450px;
+    height:400px;
     overflow:hidden;
     border-color:1px solid black;
 }
