--- a/task2.css
+++ b/task2.css
@@ -2,9 +2,10 @@ body{
     width:100%;
     margin-top:0px;
     margin-left:0px;
-    background-color: lightgoldenrodyellow;
     
+    background-color:lightgoldenrodyellow;    
 }
+
 .flex-container{
     display:flex;
     flex-direction:row;
@@ -31,7 +32,8 @@ body{
 }
 .container{
     width:100%;
-    height:100%;   
+    height:100%; 
+    margin:0px 0px 0px 0px;  
 }
 .row{
     width:100%;
@@ -108,7 +110,7 @@ h2{
     flex-direction:row;
     background-color:rgb(207, 143, 183);
     margin:0px 0px 0px 0px;
-    overflow:scroll;
+    overflow:hidden;
   
 }
 
@@ -132,12 +134,14 @@ h2{
     padding: 12px;
     font-size: 16px;
     border: none;
-        cursor: pointer;    
+    cursor: pointer;
+    
 }
 .dropdown {
     position: relative;
     display: inline-block;
 }
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -146,6 +150,7 @@ h2{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
+
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -153,16 +158,61 @@ h2{
     display: block;
     text-align: start;
 }
+
 .dropdown-content a:hover {background-color: #ac7474}
+
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
 .dropdown:hover .dropbtn {
     background-color: #dbdfdb;
 }
 .fa1{
     font-size:40px;
-}     
+}
+.dropbtn1 {
+    background-color: rgb(102, 99, 117);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown1 {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown1-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown1-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align:start;
+}
+
+.dropdown1-content a:hover {background-color: #ac7474}
+
+.dropdown1:hover .dropdown1-content {
+    display: block;
+}
+
+.dropdown1:hover .dropbtn1 {
+    background-color: #dbdfdb;
+}
+
+     
 .flex-container2{
     display:flex;
     flex-direction:row ;
@@ -219,5 +269,13 @@ P{
 }
 #new{
     height:136px;
-    width:136px;
+    width:33.3333%;
+}
+#size{
+   text-overflow:hidden; 
+}
+@media only screen and (max-width:200px){
+    body{
+        overflow-x:hidden; 
+    }
 }
